[gd_scene load_steps=6 format=3 uid="uid://ddhp5vwym302n"]

[ext_resource type="Script" path="res://main_scene/main_scene.gd" id="1_4trfh"]
[ext_resource type="Script" path="res://main_scene/score_board/label.gd" id="2_ft3gt"]
[ext_resource type="Texture2D" uid="uid://cxfynhn0qgngo" path="res://image/girl/girlPlaceholder.png" id="3_a0h55"]
[ext_resource type="PackedScene" uid="uid://mrqayx5bak0g" path="res://dialog_one/dialog_one.tscn" id="4_6b11k"]

[sub_resource type="Theme" id="Theme_suvf8"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_4trfh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="ScoreBoard" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme = SubResource("Theme_suvf8")
theme_override_font_sizes/font_size = 30
script = ExtResource("2_ft3gt")

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 525.0
offset_bottom = 1333.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("3_a0h55")

[node name="DialogOne" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="DialogOne" parent="DialogOne" instance=ExtResource("4_6b11k")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = -177.0
offset_top = -202.0
offset_right = 177.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8

[connection signal="timeout" from="SpeedTimer" to="." method="_on_speed_timer_timeout"]
